--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-jupyter = "*"
-black = "*"
 
 [packages]
-spacy = "==2.0.18"
-numpy = "==1.16.0"
-asyncio = "*"
-websockets = "==7.0"
-pipfile = "*"
 backcall = "==0.1.0"
 bleach = "==3.1.0"
 certifi = "==2018.11.29"
@@ -29,6 +22,8 @@ ipykernel = "==5.1.0"
 ipython = "==7.2.0"
 jedi = "==0.13.2"
 jsonschema = "==2.6.0"
+jupyter-client = "==5.2.4"
+jupyter-core = "==4.4.0"
 jupyterlab = "==0.35.4"
 jupyterlab-server = "==0.2.0"
 mistune = "==0.8.4"
@@ -38,17 +33,20 @@ murmurhash = "==1.0.1"
 nbconvert = "==5.4.0"
 nbformat = "==4.4.0"
 notebook = "==5.7.4"
+numpy = "==1.16.0"
 pandocfilters = "==1.4.2"
 parso = "==0.3.2"
 pickleshare = "==0.7.5"
 plac = "==0.9.6"
 preshed = "==2.0.1"
+prompt-toolkit = "==2.0.8"
 python-dateutil = "==2.7.5"
 pywinpty = "==0.5.5"
 pyzmq = "==17.1.2"
 regex = "==2018.1.10"
 requests = "==2.21.0"
 six = "==1.12.0"
+spacy = "==2.0.18"
 terminado = "==0.8.1"
 testpath = "==0.4.2"
 thinc = "==6.12.1"
@@ -60,16 +58,14 @@ ujson = "==1.35"
 urllib3 = "==1.24.1"
 wcwidth = "==0.1.7"
 webencodings = "==0.5.1"
+websockets = "==7.0"
 wrapt = "==1.10.11"
 ipython_genutils = "==0.2.0"
 Jinja2 = "==2.10"
-jupyter_client = "==5.2.4"
-jupyter_core = "==4.4.0"
 MarkupSafe = "==1.1.0"
 prometheus_client = "==0.5.0"
-prompt_toolkit = "==2.0.8"
 Pygments = "==2.3.1"
 Send2Trash = "==1.5.0"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
